Abritel parser improvment